# Portfolio-Optimisation

./: .editorconfig  .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  .yamllint.yaml  .zizmor.yml  AUTHORS.md  CHANGELOG.md  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  GOVERNANCE.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  SUPPORT.md  _typos.toml  cliff.toml  commitlint.config.cjs  econometrics.py  lychee.toml  main.ipynb  main.tex  mkdocs.yml  plotting.py  portfolio.py  pyproject.toml  risk.py  stochastics.py  utils.py
.github/: CODEOWNERS  FUNDING.yml  PULL_REQUEST_TEMPLATE.md  auto_assign.yml  dependabot.yml  labeler.yml  labels.yml  release-drafter.yml  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: auto-assign.yml  ci.yml  codeql.yml  commitlint.yml  dependency-review.yml  diagrams.yml  docs.yml  first-interaction.yml  labels-sync.yml  latex.yml  links.yml  lock-threads.yml  osv-scanner.yml  pr-labeler.yml  pr-size.yml  python.yml  release-drafter.yml  release.yml  scorecard.yml  security.yml  stale.yml  trivy.yml  zizmor.yml
Initial_Files/: market_data.parquet
appendix/: a-supporting.tex
cache/: bootstrap_5527598047917116431.parquet  bootstrap_5719594982428736407.parquet  bootstrap_6479842822594189866.parquet  bootstrap_6780512591136239682.parquet  bootstrap_7576019139300031776.parquet  bootstrap_7615222356864730472.parquet
chapters/: 01-introduction.tex  02-background.tex  03-scope.tex  03-terms-of-reference.tex  04-analysis.tex  04-evidence-and-analysis.tex  05-conclusions.tex  conclusion.tex
docs/: architecture.md  glossary.md  index.md  installation.md  usage.md
docs/adr/: 0001-ddd-layering.md  0002-repository-unit-of-work.md  0003-deterministic-seeding.md  0004-configuration-resolution.md  0005-structured-logging.md  0006-visualisation-style.md  0007-code-derived-diagrams.md  0008-covariance-estimation.md  0009-risk-measures-and-backtesting.md  0010-sde-simulation-schemes.md  0011-testing-strategy.md  0012-dependency-management.md  0013-ci-gating-and-commits.md  0014-references-in-the-writeup.md  0015-mean-risk-optimisation.md  0016-covariance-shrinkage.md  0017-changelog-automation.md  0018-documentation-publishing.md  0019-documentation-quality-gate.md  0020-dependency-updates-and-coverage-floor.md
docs/diagrams/: layer_dependencies.dot  layer_dependencies.mmd  module_dependencies.dot  module_dependencies.mmd
docs/methodology/: allocation.md  econometrics.md  estimation.md  index.md  risk.md  stochastic-processes.md
docs/reference/: config.md  domain.md  econometrics.md  infra.md  optim.md  risk.md  sde.md
markets/econometrics/: __init__.py  tests.py
markets/infra/: __init__.py  report.py
markets/optim/: __init__.py  bootstrap.py  hrp.py
markets/risk/: __init__.py  copula.py
markets/sde/: __init__.py
markets/viz/: __init__.py  portfolio.py
portfolio_optimisation/: __init__.py  cli.py  config.py
portfolio_optimisation/domain/: __init__.py  repositories.py
portfolio_optimisation/econometrics/: __init__.py  tests.py
portfolio_optimisation/infra/: __init__.py  data.py  errors.py  logging.py  report.py  repositories.py  retry.py  weights.py
portfolio_optimisation/optim/: __init__.py  black_litterman.py  bootstrap.py  cdar.py  constraints.py  denoise.py  factor_model.py  herc.py  higher_moments.py  hrp.py  mean_risk.py  nco.py  risk_parity.py  robust.py  shrinkage.py  stochastic_dominance.py
portfolio_optimisation/risk/: __init__.py  backtesting.py  coherent.py  contributions.py  copula.py  evt.py  metrics.py  plotting.py  sharpe.py  volatility.py
portfolio_optimisation/sde/: __init__.py  fitter.py  processes.py
portfolio_optimisation/services/: __init__.py  pipeline.py
portfolio_optimisation/viz/: __init__.py  bootstrap_plots.py  portfolio.py  style.py
preamble/: packages.tex
preliminary/: abstract.tex  author-declaration.tex  preliminary.tex
references/: references.bib
tests/: __init__.py  test_architecture.py  test_backtesting.py  test_black_litterman.py  test_cdar.py  test_cli.py  test_coherent.py  test_comoments.py  test_config.py  test_constraints.py  test_contributions.py  test_data_cache.py  test_denoise.py  test_domain.py  test_evt.py  test_factor_model.py  test_golden.py  test_herc.py  test_higher_moments.py  test_mean_risk.py  test_nco.py  test_processes.py  test_properties.py  test_reproducibility.py  test_retry.py  test_risk_parity.py  test_robust.py  test_sharpe.py  test_shrinkage.py  test_smoke.py  test_stochastic_dominance.py  test_viz.py  test_volatility.py
tests/benchmarks/: test_bench.py
tests/golden/: pipeline_metrics.json
tools/: gen_diagrams.py
