[project]
name = "portfolio-optimisation"
version = "0.0.0"
description = "Quant infrastructure for portfolio optimisation and risk modelling."
readme = "README.md"
requires-python = ">=3.12,<3.14"
license = { file = "LICENSE" }
authors = [{ name = "Zac Kienzle" }]
keywords = [
  "portfolio-optimisation",
  "quantitative-finance",
  "risk-management",
  "hierarchical-risk-parity",
  "copula",
  "cvar",
  "value-at-risk",
  "stochastic-processes",
]
classifiers = [
  "Development Status :: 2 - Pre-Alpha",
  "Intended Audience :: Financial and Insurance Industry",
  "License :: OSI Approved :: MIT License",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Office/Business :: Financial",
]
dependencies = [
  # Core numerical stack.
  "numpy>=2.1",
  "scipy>=1.14",
  "pandas>=2.2",
  "pyarrow>=17.0",
  # Plotting.
  "matplotlib>=3.9",
  "seaborn>=0.13",
  "plotly>=5.24",
  # Portfolio + risk.
  "scikit-learn>=1.5",
  "pyportfolioopt>=1.5",
  "arch>=7.0",
  # Econometrics + statistics.
  "statsmodels>=0.14",
  # Stochastic processes. PyPI distribution name is pymle-diffusion; the
  # import path remains `pymle`.
  "pymle-diffusion>=0.0.1",
  # Data + reporting.
  "yfinance>=0.2.40",
  "rich>=13.8",
]

[project.optional-dependencies]
notebooks = [
  "ipykernel>=6.29",
  "jupyterlab>=4.2",
  "nbconvert>=7.16",
]
perf = [
  # Hot-loop accelerators; opt-in to avoid pulling LLVM at import time.
  "numba>=0.60",
  "numexpr>=2.10",
]
optim = [
  # Convex optimisation: CDaR LP, SSD constraints, Min-CVaR, ERC, PGP.
  # Opt-in to keep default install lean.
  "cvxpy>=1.5",
  "ecos>=2.0",
  "scs>=3.2",
]

[dependency-groups]
dev = [
  "pytest>=8.3",
  "pytest-cov>=5.0",
  "ruff>=0.7",
  "pyright>=1.1.380",
]

[build-system]
requires = ["hatchling>=1.25"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["portfolio_optimisation"]

[tool.uv]
required-version = ">=0.5"

[tool.ruff]
line-length = 100
target-version = "py312"
extend-exclude = [
  "case-comp",
  "docs",
  ".github",
  ".venv",
]

[tool.ruff.lint]
select = [
  "E",   # pycodestyle errors
  "W",   # pycodestyle warnings
  "F",   # pyflakes
  "I",   # isort
  "N",   # pep8-naming
  "UP",  # pyupgrade
  "B",   # flake8-bugbear
  "A",   # flake8-builtins
  "C4",  # flake8-comprehensions
  "SIM", # flake8-simplify
  "ARG", # flake8-unused-arguments
  "PIE", # flake8-pie
  "PT",  # flake8-pytest-style
  "RUF", # ruff-specific
  "PLE", # pylint errors
  "PLW", # pylint warnings
  "TRY", # tryceratops
  "PERF",
  "FURB",
  "ERA", # eradicate (no commented-out code)
]
ignore = [
  "E501",   # line length governed by formatter
  "TRY003", # long messages on built-in exceptions are clearer than custom classes
]

[tool.ruff.lint.per-file-ignores]
"tests/**/*.py" = ["ARG001", "ARG002"]
"portfolio_optimisation/**/__init__.py" = ["F401"]

[tool.ruff.format]
docstring-code-format = true
docstring-code-line-length = 80

[tool.pyright]
include = ["portfolio_optimisation", "tests"]
exclude = ["case-comp", "docs", "**/__pycache__", ".venv"]
pythonVersion = "3.12"
typeCheckingMode = "strict"
useLibraryCodeForTypes = true
reportMissingImports = "error"
reportMissingTypeStubs = "warning"
reportImplicitOverride = "warning"
reportUnnecessaryTypeIgnoreComment = "warning"

[[tool.pyright.executionEnvironments]]
# Strict elsewhere; relax library-stub-induced and library-typing-quirk
# diagnostics inside the package. Pyright still enforces structural
# correctness (return types match docstrings, no obvious shape errors)
# via warnings, but library Unknowns do not block CI.
root = "portfolio_optimisation"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeStubs = "none"
reportGeneralTypeIssues = "warning"
reportAttributeAccessIssue = "warning"
reportAssignmentType = "warning"
reportArgumentType = "warning"
reportReturnType = "warning"
reportInvalidTypeForm = "warning"
reportPrivateImportUsage = "warning"

[[tool.pyright.executionEnvironments]]
# Tests construct fixtures from pandas / numpy which surface Unknowns; relax
# the same library-typing diagnostics here.
root = "tests"
reportUnknownArgumentType = "none"
reportUnknownMemberType = "none"
reportUnknownParameterType = "none"
reportUnknownVariableType = "none"
reportUnknownLambdaType = "none"
reportMissingTypeStubs = "none"
reportGeneralTypeIssues = "warning"
reportAttributeAccessIssue = "warning"
reportAssignmentType = "warning"
reportArgumentType = "warning"
reportReturnType = "warning"
reportInvalidTypeForm = "warning"
reportPrivateImportUsage = "warning"

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = [
  "-ra",
  "--strict-markers",
  "--strict-config",
  "--showlocals",
  "--tb=short",
]
filterwarnings = [
  "error",
  # Upstream libraries warn liberally; downgrade to non-fatal in tests.
  "ignore::DeprecationWarning:pkg_resources.*",
  "ignore::PendingDeprecationWarning",
  "ignore:.*scipy.*:DeprecationWarning",
  "ignore:.*statsmodels.*:DeprecationWarning",
  "ignore:.*pandas.*:DeprecationWarning",
]

[tool.coverage.run]
source = ["portfolio_optimisation"]
branch = true

[tool.coverage.report]
exclude_also = [
  "raise NotImplementedError",
  "if TYPE_CHECKING:",
  "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = false
